--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@seinfeld/quotes/data-access": ["libs/quotes/data-access/src/index.ts"]
+      "@seinfeld/quotes/data-access": ["libs/quotes/data-access/src/index.ts"],
+      "@seinfeld/quotes/page": ["libs/quotes/page/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
